[gd_scene load_steps=38 format=2]

[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MainScenes/Audio.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/public-pixel-font/PublicPixel-eZPz6.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/MenuButton.gd" type="Script" id=4]
[ext_resource path="res://Resources/Audio/FX/UI_Change_Selection.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Textures/LightTRansparetn.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HelperScenes/UI/StorePanelBool.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Textures/FX/PlayerLight.png" type="Texture" id=8]
[ext_resource path="res://Scripts/UI/StorePage.gd" type="Script" id=9]
[ext_resource path="res://Scripts/UI/StoreSuperPanel.gd" type="Script" id=11]
[ext_resource path="res://Resources/Textures/Items/bullet-3Hi-Res.png" type="Texture" id=12]
[ext_resource path="res://Resources/Textures/Items/bullet-4Hi-Res.png" type="Texture" id=13]
[ext_resource path="res://Resources/Textures/Items/bullet-2Hi-Res.png" type="Texture" id=14]
[ext_resource path="res://Resources/Textures/Entities/player3Hi_Res.png" type="Texture" id=15]
[ext_resource path="res://Resources/Textures/Entities/player4Hi-Res.png" type="Texture" id=16]
[ext_resource path="res://Resources/Textures/Entities/player2Hi-Res2.png" type="Texture" id=17]
[ext_resource path="res://Resources/Textures/Entities/player5Hi-Res.png" type="Texture" id=18]
[ext_resource path="res://Resources/Audio/Music/Menus/Opalescence Shop.mp3" type="AudioStream" id=19]
[ext_resource path="res://Scenes/HelperScenes/UI/ScreenShake.tscn" type="PackedScene" id=20]
[ext_resource path="res://Resources/Textures/Items/bullet-5Hi-Res.png" type="Texture" id=21]
[ext_resource path="res://Scenes/HelperScenes/UI/BouncyText.tscn" type="PackedScene" id=22]
[ext_resource path="res://Resources/Textures/Items/LaserUIImage4.png" type="Texture" id=23]
[ext_resource path="res://Resources/Textures/Items/LaserUIImage3.png" type="Texture" id=24]
[ext_resource path="res://Resources/Textures/Items/LaserUIImage2.png" type="Texture" id=25]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.498489, 1 )
colors = PoolColorArray( 0.0823529, 0.0823529, 0.0823529, 1, 1, 1, 1, 1, 0.0823529, 0.0823529, 0.0823529, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=13]
script/source = "extends Node2D

export var title = \"\"
export var setting_name = \"\"
export var price = 100

export var button_index = 0

export var is_selected = false
export var select_scale = 1.1

var has_purchased
var page
export var base_color = Color.white
export var purchased_color = Color()
export var purchase_juice_scale = 1.0

# Called when the node enters the scene tree for the first time.
func _ready():
	has_purchased = Settings.get_setting_if_exists(Settings.shop, setting_name, false)
	$Frames/UnpurchasedFrame.visible = !has_purchased
	$Frames/UnpurchasedFrame2.visible = !has_purchased
	modulate = base_color if has_purchased == false else purchased_color

	$Light2D.color = modulate
	$Light2D2.color = modulate
	$BuyExplosionParticles.scale *= (1+purchase_juice_scale)/2
	$BuyExplosionParticles.amount *= (1+purchase_juice_scale)/2
	$BuyExplosionParticles2.amount *= (1+purchase_juice_scale)/2
	$BuyExplosionParticles3.amount *= (1+purchase_juice_scale)/2
	$BuyExplosionParticles4.amount *= (1+purchase_juice_scale)/2
	print(\"$BuyExplosionParticles4.amount\", $BuyExplosionParticles4.amount)
	$BuyExplosionParticles4.lifetime *= (1+purchase_juice_scale)/2

	$BuyImplosionParticles.scale *= (1+purchase_juice_scale)/2
	$BuyImplosionParticles.amount *= (1+purchase_juice_scale * purchase_juice_scale)/2
	$BuyImplosionParticles.lifetime *= (1+purchase_juice_scale)/2

	$BuyAudioRiser.pitch_scale *= 2/(1+purchase_juice_scale)
	$BuyAudio2.pitch_scale *= 2/(1+purchase_juice_scale)
	$BuyAudio3.pitch_scale *= 2/(1+purchase_juice_scale)
	$BuyParticlesTimer.wait_time *= purchase_juice_scale
	update_labels()

func _on_BuyButton_pressed():
	try_buy()

func try_buy():
	if(has_purchased or is_selected == false or page.buying_event_is_playing == true):
		return

	if(Settings.shop[\"points\"] >= price and !has_purchased):
		page.buying_event_is_playing = true
		page.stop_input_actions()
		has_purchased = true
		page.start_point_deduction_event(price, purchase_juice_scale)

		Settings.shop[setting_name] = true
		Settings.save()
		$BuyImplosionParticles.emitting = true
		$BuyAudioRiser.play()
		$BuyParticlesTimer.start()
		$BuyExplosionParticles2.emitting = true
		$BuyExplosionParticles3.emitting = true
		$BuyExplosionParticles4.emitting = true
		$Frames/UnpurchasedFrame.visible = false
		Global.shakes[\"laser\"].start(7*purchase_juice_scale, 1.6*purchase_juice_scale, 80, 1)


func update_labels():
	$Title.text = title
	if(!has_purchased):
		$Price.text = \"Price: \"+str(Global.point_num_to_string(price, [\"b\", \"m\", \"k\"]))
		$Light2D2.color = modulate
		$BuyButton.modulate = modulate
	else:
		$Price.text = \"\"
		$Light2D2.color = Color.black
		$BuyButton.modulate = Color.gray
		$BuyButton.text = \"PURCHASED\"

func select():
	$Particles2D.visible = true
	$Light2D.visible = true
	$Light2D2.visible = true
	is_selected = true
	scale *= select_scale

func deselect():
	$Particles2D.visible = false
	$Light2D.visible = false
	$Light2D2.visible = false
	is_selected = false
	scale /= select_scale

func reset():
	Settings.shop[setting_name] = false
	has_purchased = false
	update_labels()

func set_page(_page):
	page = _page


func _on_BuyParticlesTimer_timeout():
	$BuyAudioRiser.stop()
	$BuyAudio.play()
	$BuyAudio2.play()
	$BuyAudio3.play()
	$BuyExplosionParticles.emitting = true
	$BuyImplosionParticles.emitting = false
	$BuyImplosionParticles.visible = false
	page.buying_event_is_playing = false
	modulate = purchased_color
	$Frames/UnpurchasedFrame2.visible = false
	$Light2D.color = modulate
	$Light2D2.color = modulate
	update_labels()
	Global.shakes[\"bomb\"].start(50*purchase_juice_scale, 0.4*purchase_juice_scale, 80, 1)
	Global.shakes[\"laser\"].start(7*purchase_juice_scale, 1.6*purchase_juice_scale, 80, 1)
	page.change_color(modulate)
	page.resume_input_actions()
"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 100, 25.021, 1 )
flag_disable_z = true
direction = Vector3( -7.829, 0, 0 )
spread = 138.1
gravity = Vector3( -1500, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 3.0
scale_random = 1.0

[sub_resource type="CanvasItemMaterial" id=10]
light_mode = 1

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="StorePage" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
position = Vector2( -279, -183 )
scale = Vector2( 15.0703, 8.64844 )
texture = ExtResource( 1 )
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
color = Color( 0, 0, 0, 1 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 482, 406 )

[node name="SepBar" type="Sprite" parent="UI"]
position = Vector2( -60, -119 )
scale = Vector2( 0.156, 3.35 )
texture = SubResource( 12 )

[node name="SepBar2" type="Sprite" parent="UI"]
position = Vector2( -60, 37 )
scale = Vector2( 0.156, 3.35 )
texture = SubResource( 12 )

[node name="Panels" type="Node2D" parent="UI"]

[node name="StoreSuperPanel" type="Node2D" parent="UI/Panels"]
position = Vector2( 0, -1 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Game Modes"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel"]
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 464.92, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard Hard Mode"
setting_name = "hard_mode_unlocked"
price = 300000
purchased_color = Color( 0.823529, 0.580392, 0.00784314, 1 )
purchase_juice_scale = 0.8

[node name="StorePanelBool2" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 839.56, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard Very Hard Mode"
setting_name = "extra_hard_mode_unlocked"
price = 1500000
purchased_color = Color( 0.878431, 0.431373, 0, 1 )
purchase_juice_scale = 1.2

[node name="StorePanelBool3" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( 1293.41, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Standard NIGHTMARE Mode"
setting_name = "nightmare_mode_unlocked"
price = 3000000
purchased_color = Color( 1, 0, 0, 1 )
purchase_juice_scale = 2.0

[node name="StorePanelBool4" parent="UI/Panels/StoreSuperPanel/Panels" instance=ExtResource( 7 )]
position = Vector2( -74.3872, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Challenge Game Mode"
setting_name = "challenge_mode_unlocked"
price = 500000
purchased_color = Color( 0.686275, 1, 0, 1 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel2" type="Node2D" parent="UI/Panels"]
position = Vector2( 0, 217 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Pellet Types"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel2"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel2"]
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool5" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Target-Seeking Pellets"
setting_name = "bullet2_is_unlocked"
price = 450000
purchased_color = Color( 0.905882, 0.619608, 0.0666667, 1 )

[node name="Bullet-pixel2" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool5"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 14 )

[node name="StorePanelBool6" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
position = Vector2( 406.593, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Heavy Pellets"
setting_name = "bullet3_is_unlocked"
price = 750000
purchased_color = Color( 0.411765, 0.34902, 0.772549, 1 )

[node name="Bullet-pixel3" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool6"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 12 )

[node name="StorePanelBool9" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
position = Vector2( 823.077, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Scatter Shot Pellets"
setting_name = "bullet4_is_unlocked"
price = 1000000
purchased_color = Color( 0.823529, 0.290196, 0.678431, 1 )

[node name="Bullet-pixel4" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool9"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )

[node name="StorePanelBool10" parent="UI/Panels/StoreSuperPanel2/Panels" instance=ExtResource( 7 )]
position = Vector2( 823.077, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Poison Pellets"
setting_name = "bullet5_is_unlocked"
price = 1200000
purchased_color = Color( 0.266667, 0.537255, 0.180392, 1 )
purchase_juice_scale = 1.2

[node name="Bullet-pixel4" type="Sprite" parent="UI/Panels/StoreSuperPanel2/Panels/StorePanelBool10"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 21 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel2"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel5" type="Node2D" parent="UI/Panels"]
position = Vector2( 0, 217 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Laser Types"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel5"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel5"]
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool5" parent="UI/Panels/StoreSuperPanel5/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
title = "Tri-beam Laser"
setting_name = "laser2_is_unlocked"
price = 650000
purchased_color = Color( 0.415686, 1, 0.862745, 1 )
purchase_juice_scale = 1.1

[node name="Bullet-pixel2" type="Sprite" parent="UI/Panels/StoreSuperPanel5/Panels/StorePanelBool5"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 25 )

[node name="StorePanelBool6" parent="UI/Panels/StoreSuperPanel5/Panels" instance=ExtResource( 7 )]
position = Vector2( 406.593, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Laser Strike"
setting_name = "laser3_is_unlocked"
price = 950000
purchased_color = Color( 0.564706, 0, 0.556863, 1 )
purchase_juice_scale = 1.2

[node name="Bullet-pixel3" type="Sprite" parent="UI/Panels/StoreSuperPanel5/Panels/StorePanelBool6"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 24 )

[node name="StorePanelBool7" parent="UI/Panels/StoreSuperPanel5/Panels" instance=ExtResource( 7 )]
position = Vector2( 406.593, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Ball Lightning"
setting_name = "laser4_is_unlocked"
price = 1000000
purchased_color = Color( 0.878431, 1, 0.176471, 1 )
purchase_juice_scale = 1.3

[node name="Bullet-pixel3" type="Sprite" parent="UI/Panels/StoreSuperPanel5/Panels/StorePanelBool7"]
position = Vector2( 175.385, -34.9233 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 23 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel5"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="StoreSuperPanel3" type="Node2D" parent="UI/Panels"]
position = Vector2( 0, 421 )
scale = Vector2( 0.91, 0.91 )
script = ExtResource( 11 )
title = "Player Types"

[node name="Title" type="Label" parent="UI/Panels/StoreSuperPanel3"]
margin_left = -319.22
margin_top = -157.483
margin_right = 161.78
margin_bottom = -122.483
custom_fonts/font = SubResource( 1 )
text = "TITLE"
align = 1

[node name="Panels" type="Node2D" parent="UI/Panels/StoreSuperPanel3"]
scale = Vector2( 0.65, 0.65 )

[node name="StorePanelBool7" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
scale = Vector2( 1.0989, 1.0989 )
script = SubResource( 13 )
title = "Laser-er"
setting_name = "player2_is_unlocked"
price = 800000
purchased_color = Color( 0.658824, 0.952941, 1, 1 )
purchase_juice_scale = 1.5

[node name="Player2" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool7"]
position = Vector2( 166.769, -51.229 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 17 )

[node name="StorePanelBool8" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 400, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Gunner"
setting_name = "player3_is_unlocked"
price = 1000000
purchased_color = Color( 1, 0.607843, 0.184314, 1 )
purchase_juice_scale = 1.6

[node name="Player3" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool8"]
position = Vector2( 166.769, -51.229 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 15 )

[node name="StorePanelBool9" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 1100, -2.19781 )
scale = Vector2( 1.0989, 1.0989 )
title = "Bomber"
setting_name = "player4_is_unlocked"
price = 2000000
purchased_color = Color( 0.835294, 1, 0.839216, 1 )
purchase_juice_scale = 1.7

[node name="Player4" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool9"]
position = Vector2( 166.769, -51.229 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )

[node name="StorePanelBool10" parent="UI/Panels/StoreSuperPanel3/Panels" instance=ExtResource( 7 )]
position = Vector2( 1800, -2.2 )
scale = Vector2( 1.0989, 1.0989 )
title = "Speeder"
setting_name = "player5_is_unlocked"
price = 3500000
purchased_color = Color( 0.760784, 0.580392, 1, 1 )
purchase_juice_scale = 2.1

[node name="Player5" type="Sprite" parent="UI/Panels/StoreSuperPanel3/Panels/StorePanelBool10"]
position = Vector2( 166.769, -51.229 )
rotation = 4.71239
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 18 )

[node name="SelectAudio" type="AudioStreamPlayer" parent="UI/Panels/StoreSuperPanel3"]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="Darkener" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -769, 49 )
scale = Vector2( 15.0937, 3.15625 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener2" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -753, -166 )
scale = Vector2( 3.86719, 1.98438 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener3" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( 191, -124 )
scale = Vector2( 6.46094, 1.35156 )
texture = ExtResource( 1 )
centered = false

[node name="Darkener4" type="Sprite" parent="UI"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.87451 )
position = Vector2( -761, -589 )
scale = Vector2( 15.0937, 3.34375 )
texture = ExtResource( 1 )
centered = false

[node name="BackButton" type="Button" parent="UI"]
margin_left = 569.0
margin_top = 218.0
margin_right = 741.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Back"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/BackButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/BackButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="ResetButton" type="Button" parent="UI"]
margin_left = 546.0
margin_top = 102.0
margin_right = 758.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Reset"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/ResetButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="AddPointButton" type="Button" parent="UI"]
margin_left = 363.0
margin_top = 160.0
margin_right = 775.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 6 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 2 )
text = "Add Points"
flat = true
script = ExtResource( 4 )
right_margin_mod_on_hover = -50
button_index = 6
button_shift_index = 5

[node name="Light2D" type="Light2D" parent="UI/AddPointButton"]
visible = false
position = Vector2( 139, 28.5 )
scale = Vector2( 0.782, 0.091 )
texture = ExtResource( 6 )
energy = 3.0

[node name="Particles2D" type="Particles2D" parent="UI/AddPointButton"]
visible = false
position = Vector2( 60, 28 )
rotation = 3.14159
scale = Vector2( 1, 1.091 )
amount = 20
lifetime = 1.5
process_material = SubResource( 3 )

[node name="StoreLabel" type="Label" parent="."]
material = SubResource( 10 )
margin_left = 56.0
margin_top = 66.0
margin_right = 360.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 4 )
text = "STORE"

[node name="PointsLabel" type="Label" parent="."]
material = SubResource( 10 )
margin_left = 445.0
margin_top = 100.0
margin_right = 685.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 5 )
text = "Points: "

[node name="PointsLabel2" parent="." instance=ExtResource( 22 )]
material = SubResource( 10 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 659.0
margin_top = 105.0
margin_right = 953.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 5 )
text = "0"
bounce_amount = 5

[node name="NextPanelButton" type="Button" parent="."]
margin_left = 42.0
margin_top = 462.0
margin_right = 841.0
margin_bottom = 698.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
enabled_focus_mode = 0
flat = true

[node name="LastPanelButton" type="Button" parent="."]
margin_left = 49.0
margin_top = 10.0
margin_right = 848.0
margin_bottom = 268.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
enabled_focus_mode = 0
flat = true

[node name="SuperPanelNextButton" type="Button" parent="."]
margin_left = 683.0
margin_top = 285.0
margin_right = 1376.0
margin_bottom = 458.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
enabled_focus_mode = 0
flat = true

[node name="SuperPanelLastButton" type="Button" parent="."]
margin_left = -471.0
margin_top = 261.0
margin_right = 215.0
margin_bottom = 456.0
focus_mode = 0
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
enabled_focus_mode = 0
flat = true

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.7
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 517.75, 113 )
scale = Vector2( 2.44125, 0.46 )
texture = ExtResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 4.0
autoplay = true
script = ExtResource( 2 )
default_vol = 4.0
is_music = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="ExplosionScreenShake" parent="Camera2D" instance=ExtResource( 20 )]
shake_name = "explosion"

[node name="LaserScreenShake" parent="Camera2D" instance=ExtResource( 20 )]
shake_name = "laser"

[node name="BombScreenShake" parent="Camera2D" instance=ExtResource( 20 )]
shake_name = "bomb"

[node name="MiscScreenShake" parent="Camera2D" instance=ExtResource( 20 )]
shake_name = "misc"

[node name="PointLabelEventTimer" type="Timer" parent="."]
wait_time = 0.08

[node name="PointDeductAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 404, 348 )
texture = ExtResource( 6 )
texture_scale = 1.5
energy = 1.33

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( 1134, 650 )
texture = ExtResource( 6 )
texture_scale = 0.5
energy = 1.33

[connection signal="mouse_entered" from="UI/BackButton" to="UI/BackButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/BackButton" to="UI/BackButton" method="mouse_exited"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="UI/ResetButton" to="UI/ResetButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/ResetButton" to="UI/ResetButton" method="mouse_exited"]
[connection signal="pressed" from="UI/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="mouse_entered" from="UI/AddPointButton" to="UI/AddPointButton" method="mouse_entered"]
[connection signal="mouse_exited" from="UI/AddPointButton" to="UI/AddPointButton" method="mouse_exited"]
[connection signal="pressed" from="UI/AddPointButton" to="." method="_on_AddPointButton_pressed"]
[connection signal="pressed" from="NextPanelButton" to="." method="_on_NextPanelButton_pressed"]
[connection signal="pressed" from="LastPanelButton" to="." method="_on_LastPanelButton_pressed"]
[connection signal="pressed" from="SuperPanelNextButton" to="." method="_on_SuperPanelNextButton_pressed"]
[connection signal="pressed" from="SuperPanelLastButton" to="." method="_on_SuperPanelLastButton_pressed"]
[connection signal="timeout" from="PointLabelEventTimer" to="." method="_on_PointLabelEventTimer_timeout"]
